# GPUOS

./: CMakeLists.txt  LICENSE  README.md  paper.md
benchmark_results/: attention_results.csv  attention_results.json  microbatch_results.csv  microbatch_results.json  mig_simulated_results.csv  mig_simulated_results.json  mixed_ops_results.csv  mixed_ops_results.json  mps_results.csv  mps_results.json  simple_baseline.json
benchmark_results/visualizations/: SUMMARY.md  tables.tex
benchmarks/: README.md  __init__.py  bench_attention.py  bench_microbatch.py  bench_mig.py  bench_mixed_ops.py  bench_mps.py  benchmark_utils.py  run_all_benchmarks.py  visualize_results.py
examples/: pytorch_batch_demo.py  pytorch_reduce_demo.py  pytorch_scheduler_advanced_demo.py  pytorch_scheduler_demo.py
pytorch_ext/: build_extension.py  gpuos_ext.cpp  scheduler.py  setup.py
src/: common.h  cuda_linker_stub.cu  host.cpp  persistent_kernel  persistent_kernel.cu  persistent_kernel.fatbin.c  persistent_kernel.ptx  persistent_kernel_dlink.reg.c
test/: dual_slot_switch.cpp  online_switch.cpp  test.py
